--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,7 @@
 
 \usepackage{fullpage}
 \usepackage{graphicx}
+\usepackage{appendix}
 
 %tables that can span page breaks
 \usepackage{longtable}
@@ -183,9 +184,15 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter*{Appendices}
+%\chapter*{Appendices}
 
 \addcontentsline{toc}{chapter}{Appendices}
+
+\begin{appendices}
+
+%\input{appendices/xsens.tex}
+
+\end{appendices}
 
 % ======= ======= ======= ======= ======= ======= =======
 
