--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -108,7 +108,7 @@ IndoorAtlas promised to be a good match for the IPS requirements of the Mirrorsh
 
 The major concern at this point was whether the building materials employed in the construction of cultural heritage sites such as chapels, castles \& cathedrals would pose great enough distortions to the Earth's magnetic field for IndoorAtlas to provide its boasted accuracy (which would be sufficient to discern between adjacent rooms, between doorways \& their surrounding walls, etc). These building materials are largely various types of stone, along with wood, a far cry from the metal framework that permeates most modern buildings.
 
-Whilst initial tests of the IndoorAtlas beta technology within a departmental building were promising, this was a modern building with a steel beam structure \& an abundance of computing infrastructure \& its associated cabling \& cooling provision. Figure \ref{jack-cole-splodges-black.png} shows the results of one of these tests; the light grey line represents the path walked around the building at a slow walking pace ($<1$ms$^{-1}$, akin to a visitor to a cultural heritage site might walk through it) with each black dot representing a position reported by the IndoorAtlas platform.
+Whilst initial tests of the IndoorAtlas beta technology within a departmental building\footnote{\url{https://www.youtube.com/watch?v=l-eIvzpScRs}}\footnote{\url{https://www.youtube.com/watch?v=9hc2zEeQJXQ}} were promising, this was a modern building with a steel beam structure \& an abundance of computing infrastructure \& its associated cabling \& cooling provision. Figure \ref{jack-cole-splodges-black.png} shows the results of one of these tests; the light grey line represents the path walked around the building at a slow walking pace ($<1$ms$^{-1}$, akin to a visitor to a cultural heritage site might walk through it) with each black dot representing a position reported by the IndoorAtlas platform.
 
 It should be noted that the IndoorAtlas technology only reports positions upon routes that have been previously mapped in an offline mapping phase; in figure \ref{jack-cole-splodges-black.png} this offline mapping phase comprised walking the same light grey route several times. In the following test, had the user walked off the light grey route, IndoorAtlas would still have reported the user as being somewhere upon it; it would not attempt to extrapolate their position into unmapped territory. This is presumably because the scale of distortions in the Earth's magnetic field is quite fine grained, supported by the fact that many of the black dots are less than a meter apart, thus extrapolation would not fair well at all. This is an important aspect to take into account when performing the offline mapping phase, as one must map sufficient paths to cover all possible places \& routes that a user may walk. For locations comprised mainly of corridors \& small rooms, this is not an issue, however for a location that contains a large open space in which the user is free to meander, a more involved mapping process in which the entire space is systematically covered by back \& forth routes that progress across the space would be required.
 
@@ -116,31 +116,19 @@ It should be noted that the IndoorAtlas technology only reports positions upon r
 	\begin{center}
 		\includegraphics[width=0.7\textwidth]{jack-cole-splodges-black.png}
 		\caption{Testing of IndoorAtlas in a department building, approximately 40m wide by 30m tall.}
-		\label{jack-cole-splodges}
+		\label{jack-cole-splodges-black.png}
 	\end{center}
 \end{figure}
 
+Initial testing of IndoorAtlas at a 15th century chapel proved surprisingly successful, with the platform able to track the smartphone accurately throughout the building even without any obvious overbearing metal content in the structure or furnishing. Figure \ref{sallies.png} shows the set of positions reported by the IndoorAtlas platform whilst walking throughout the chapel, which is roughly 30m across. Upon closer inspection of the building, metal grating that runs along the ground along the central nave (representing much of the horizontal movement in figure \ref{sallies.png}) might help to explain this unexpected performance, however in other areas such as when walking to either side of the altar there were no obvious sources of magnetic interference to account for the maintained accuracy.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{sallies.png}
+		\caption{Testing of IndoorAtlas in a 15th century chapel.}
+		\label{sallies.png}
+	\end{center}
+\end{figure}
 
 %=========================================================================================================
 
