--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,15 @@
 %euro (currency) symbol
 \usepackage[gen]{eurosym}
 
+\let\oldFootnote\footnote
+\newcommand\nextToken\relax
+
+\renewcommand\footnote[1]{%
+    \oldFootnote{#1}\futurelet\nextToken\isFootnote}
+
+\newcommand\isFootnote{%
+    \ifx\footnote\nextToken\textsuperscript{,}\fi}
+
 \renewcommand{\chaptername}{}
 
 % Renders two images side-by-side & scales them so height is identical
